# arsenal-plus

./: .gitignore  LICENSE.md  README.md  mvloc.config.jsonc  pyproject.toml
.github/workflows/: nightly.yml
snippets/: ars.py  ci-nightly-body.md  mass_edits_en_vanilla_texts.py  mass_edits_ru.py  search.py  set_all_components_to_sync_on_2hr_marks.py
src-en/data/: Engi_hunter.txt  Engi_hunter.xml  LANIUS_X.txt  LANIUS_X.xml  MANTIS_HUNTER_PIRATE.xml  Mantis_hunter_3.xml  Slug_depresser.txt  Zoltan-Scout-2.txt  Zoltan-Scout-3.xml  abysseye.txt  ai_core.txt  anaerobic_bomber.xml.append  anaerobic_bomber_2.txt  anaerobic_bomber_3.txt  anaerobic_bomber_4.txt  anaerobic_bomber_6.txt  anaerobic_bomber_9.txt  anaerobic_cruiser.txt  anaerobic_cruiser.xml  anaerobic_cruiser_2.xml  anaerobic_harv_1.xml  anaerobic_harv_2.txt  anaerobic_harv_3.txt  anaerobic_harv_3.xml  anaerobic_pho_1.txt  anaerobic_pho_2.xml  anaerobic_prov_3.txt  anaerobic_scout_2.txt  anaerobic_scout_3.txt  anaerobic_scout_4.txt  anaerobic_scout_6.txt  anaerobic_scout_7.txt  anaerobic_scout_8.txt  angelada.txt  apophis.xml  auto_agressor_1.xml  auto_assault_3.txt  auto_basic_dlc_2.xml  auto_basic_dlc_3.xml  auto_boxer_1.txt  (+499 more)
src-ru/: aux-weapons.lua
src-ru/data/: Decepticon.txt  Decepticon.xml  Engi_hunter.xml  LANIUS_X.txt  LANIUS_X.xml  MANTIS_HUNTER_PIRATE.txt  MANTIS_HUNTER_PIRATE.xml  Mantis_hunter_2.txt  Mantis_hunter_3.txt  Mantis_hunter_3.xml  Rebel_ion_ship.txt  Rebel_ion_ship.xml  SEXSHIP.txt  SEXSHIP.xml  Slug_depresser.xml  Zoltan-Scout-1.txt  Zoltan-Scout-1.xml  Zoltan-Scout-3.txt  abysseye.xml  (+839 more)
(+223 files in other folders)
